--- a/Curso_de_Estatistica/Curso_de_Estatística_Parte_2.ipynb
+++ b/Curso_de_Estatistica/Curso_de_Estatística_Parte_2.ipynb
@@ -193,15 +193,7 @@
    "source": [
     "import pandas as pd"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "<frozen importlib._bootstrap>:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -507,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "source": [
     "from scipy.special import comb"
    ],
@@ -565,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "source": [
     "combinacoes = comb(60, 6)\n",
     "combinacoes"
@@ -579,7 +571,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 6
     }
    ],
    "metadata": {
@@ -1008,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "source": [
     "binom.cdf(4, n, p)"
    ],
@@ -1021,14 +1013,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 18
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "source": [
     "1 - binom.cdf(4, n, p)"
    ],
@@ -1041,14 +1033,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 19
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "source": [
     "binom.sf(4, n, p)"
    ],
@@ -1061,7 +1053,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 20
     }
    ],
    "metadata": {}
@@ -1095,9 +1087,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 21,
+   "source": [
+    "p = 0.6\n",
+    "p"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.6"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1110,9 +1116,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 22,
+   "source": [
+    "n = 12 \n",
+    "n"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 22
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1125,9 +1145,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 23,
+   "source": [
+    "k = 8\n",
+    "k"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 23
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1140,9 +1174,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 24,
+   "source": [
+    "probabilidade = binom.pmf(k, n, p)\n",
+    "print('%0.8f' % probabilidade)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.21284094\n"
+     ]
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1155,9 +1200,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 25,
+   "source": [
+    "equipes = 30 * probabilidade\n",
+    "equipes"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "6.385228185599988"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 25
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
