--- a/Curso_de_Estatistica/Curso_de_Estatística_Parte_2.ipynb
+++ b/Curso_de_Estatistica/Curso_de_Estatística_Parte_2.ipynb
@@ -1378,8 +1378,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 1,
+   "source": [
+    "import numpy as np"
+   ],
    "outputs": [],
    "metadata": {
     "colab": {},
@@ -1389,9 +1391,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 26,
+   "source": [
+    "np.e"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2.718281828459045"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 26
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
