--- a/Curso_de_Estatistica/Curso_de_Estatística_Parte_2.ipynb
+++ b/Curso_de_Estatistica/Curso_de_Estatística_Parte_2.ipynb
@@ -1449,9 +1449,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 27,
+   "source": [
+    "media = 20\n",
+    "media"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 27
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1474,9 +1488,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 28,
+   "source": [
+    "k = 15\n",
+    "k"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 28
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1499,9 +1527,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 29,
+   "source": [
+    "probabilidade = ((np.e ** (-media)) * (media ** k)) / (np.math.factorial(k))\n",
+    "print('%0.8f' % probabilidade)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.05164885\n"
+     ]
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1544,9 +1583,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 30,
+   "source": [
+    "from scipy.stats import poisson\n",
+    "\n",
+    "probabilidade = poisson.pmf(k, media)\n",
+    "print('%0.8f' % probabilidade)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.05164885\n"
+     ]
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
