--- a/Curso_de_Estatistica/Curso_de_Estatística_Parte_2.ipynb
+++ b/Curso_de_Estatistica/Curso_de_Estatística_Parte_2.ipynb
@@ -1378,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "source": [
     "import numpy as np"
    ],
@@ -1391,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "source": [
     "np.e"
    ],
@@ -1404,7 +1404,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 26
+     "execution_count": 27
     }
    ],
    "metadata": {
@@ -1449,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "source": [
     "media = 20\n",
     "media"
@@ -1463,7 +1463,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 27
+     "execution_count": 28
     }
    ],
    "metadata": {
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "source": [
     "k = 15\n",
     "k"
@@ -1502,7 +1502,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 28
+     "execution_count": 29
     }
    ],
    "metadata": {
@@ -1527,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "source": [
     "probabilidade = ((np.e ** (-media)) * (media ** k)) / (np.math.factorial(k))\n",
     "print('%0.8f' % probabilidade)"
@@ -1583,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "source": [
     "from scipy.stats import poisson\n",
     "\n",
@@ -1835,7 +1835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -2502,7 +2502,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 1
+     "execution_count": 32
     }
    ],
    "metadata": {
@@ -2585,7 +2585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "source": [
     "media = 1.70\n",
     "media"
@@ -2599,7 +2599,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 33
     }
    ],
    "metadata": {
@@ -2614,7 +2614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "source": [
     "desvio_padrao = 0.1\n",
     "desvio_padrao"
@@ -2628,7 +2628,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 34
     }
    ],
    "metadata": {
@@ -2643,7 +2643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "source": [
     "Z = (1.8 - media) / desvio_padrao\n",
     "Z"
@@ -2657,7 +2657,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 35
     }
    ],
    "metadata": {
@@ -2682,7 +2682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "source": [
     "probabilidade = 0.8413\n",
     "probabilidade"
@@ -2696,7 +2696,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 36
     }
    ],
    "metadata": {
@@ -2721,10 +2721,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "source": [
     "from scipy.stats import norm\n",
-    "norm.cdf(Z)"
+    "norm.cdf(Z)\n",
+    "\n",
+    "#cdf :: cumulative distribution function"
    ],
    "outputs": [
     {
@@ -2735,7 +2737,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 37
     }
    ],
    "metadata": {
@@ -2780,9 +2782,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 38,
+   "source": [
+    "Z = (1.7 - media) / desvio_padrao\n",
+    "Z"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 38
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2795,9 +2811,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 39,
+   "source": [
+    "Z = (1.8 - media) / desvio_padrao\n",
+    "Z"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1.0000000000000009"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 39
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2820,9 +2850,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 40,
+   "source": [
+    "probabilidade = (0.8413 - 0.5) * 2\n",
+    "probabilidade"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.6826000000000001"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 40
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2831,21 +2875,6 @@
     "colab_type": "code",
     "id": "swZ6SVQGG3E0",
     "outputId": "53e30c74-5ec5-4737-f928-600388bfe570"
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
-    "colab_type": "code",
-    "id": "oNfZZRBdGy2G",
-    "outputId": "408ee333-2e8e-4058-fe74-a75b715eedf8"
    }
   },
   {
@@ -2860,9 +2889,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 41,
+   "source": [
+    "Z_inferior = (1.6 - media) / desvio_padrao\n",
+    "round(Z_inferior, 2)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "-1.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 41
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2875,9 +2918,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 48,
+   "source": [
+    "Z_superior = (1.8 - media) / desvio_padrao\n",
+    "round(Z_superior, 2)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 48
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2887,6 +2944,48 @@
     "id": "MjEfhnQEG3E5",
     "outputId": "4a6241c6-1b04-4c5f-b62d-9e98f412f3ad"
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "source": [
+    "probabilidade = norm.cdf(Z_superior) - (1 - norm.cdf(Z_superior))\n",
+    "probabilidade"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.6826894921370863"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 49
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "source": [
+    "probabilidade = norm.cdf(Z_superior) - norm.cdf(Z_inferior)\n",
+    "probabilidade"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.6826894921370857"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 50
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
@@ -2921,9 +3020,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "a"
-   ],
+   "source": [],
    "outputs": [],
    "metadata": {
     "colab": {
