--- a/Curso_de_Estatistica/Curso_de_Estatística_Parte_2.ipynb
+++ b/Curso_de_Estatistica/Curso_de_Estatística_Parte_2.ipynb
@@ -3019,9 +3019,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 51,
+   "source": [
+    "Z = (1.9 - media) / desvio_padrao\n",
+    "Z"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1.9999999999999996"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 51
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3044,9 +3058,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 54,
+   "source": [
+    "probabilidade = 1 - 0.9772\n",
+    "probabilidade"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.022800000000000042"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 54
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3069,9 +3097,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 53,
+   "source": [
+    "probabilidade = 1 - norm.cdf(Z)\n",
+    "probabilidade"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.02275013194817921"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 53
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3084,9 +3126,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 55,
+   "source": [
+    "probabilidade = norm.cdf(-Z)\n",
+    "probabilidade"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.022750131948179216"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 55
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
