--- a/Curso_de_Estatistica/Curso_de_Estatística_Parte_2.ipynb
+++ b/Curso_de_Estatistica/Curso_de_Estatística_Parte_2.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "source": [
     "import pandas as pd"
    ],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "source": [
     "dados = pd.read_csv('data/dados.csv')"
    ],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "source": [
     "dados.head()"
    ],
@@ -316,7 +316,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 3
     }
    ],
    "metadata": {
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "source": [
     "from scipy.special import comb"
    ],
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "source": [
     "combinacoes = comb(60, 6)\n",
     "combinacoes"
@@ -571,7 +571,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 5
     }
    ],
    "metadata": {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "source": [
     "probabilidade = 1 / combinacoes\n",
     "print('%0.15f' % probabilidade)"
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "source": [
     "n = 10 \n",
     "n"
@@ -656,7 +656,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 7
     }
    ],
    "metadata": {
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "source": [
     "numero_de_alternativas_por_questao = 3\n",
     "p = 1 / numero_de_alternativas_por_questao\n",
@@ -736,7 +736,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 8
     }
    ],
    "metadata": {
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "source": [
     "q = 1 - p\n",
     "q"
@@ -775,7 +775,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 9
     }
    ],
    "metadata": {
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "source": [
     "k = 5\n",
     "k"
@@ -814,7 +814,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 10
     }
    ],
    "metadata": {
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "source": [
     "probabilidade = (comb(n, k) * (p ** k) * (q ** (n - k)))\n",
     "print('%0.8f' % probabilidade) "
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "source": [
     "from scipy.stats import binom"
    ],
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "source": [
     "probabilidade = binom.pmf(k, n, p)\n",
     "print('%0.8f' % probabilidade)"
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "source": [
     "binom.pmf(5, n, p) + binom.pmf(6, n, p) + binom.pmf(7, n, p) + binom.pmf(8, n, p) + binom.pmf(9, n, p) + binom.pmf(10, n, p)"
    ],
@@ -952,14 +952,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 14
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "source": [
     "binom.pmf([5, 6, 7, 8, 9, 10], n, p)"
    ],
@@ -973,14 +973,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 15
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "source": [
     "binom.pmf([5, 6, 7, 8, 9, 10], n, p).sum()"
    ],
@@ -993,14 +993,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 16
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "source": [
     "binom.cdf(4, n, p)"
    ],
@@ -1013,14 +1013,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 17
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "source": [
     "1 - binom.cdf(4, n, p)"
    ],
@@ -1033,14 +1033,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 18
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "source": [
     "binom.sf(4, n, p)"
    ],
@@ -1053,7 +1053,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 19
     }
    ],
    "metadata": {}
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "source": [
     "p = 0.6\n",
     "p"
@@ -1101,7 +1101,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 20
     }
    ],
    "metadata": {
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "source": [
     "n = 12 \n",
     "n"
@@ -1130,7 +1130,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 21
     }
    ],
    "metadata": {
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "source": [
     "k = 8\n",
     "k"
@@ -1159,7 +1159,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 22
     }
    ],
    "metadata": {
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "source": [
     "probabilidade = binom.pmf(k, n, p)\n",
     "print('%0.8f' % probabilidade)"
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "source": [
     "equipes = 30 * probabilidade\n",
     "equipes"
@@ -1214,7 +1214,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 25
+     "execution_count": 24
     }
    ],
    "metadata": {
@@ -1378,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "source": [
     "import numpy as np"
    ],
@@ -1391,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "source": [
     "np.e"
    ],
@@ -1404,7 +1404,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 27
+     "execution_count": 26
     }
    ],
    "metadata": {
@@ -1449,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "source": [
     "media = 20\n",
     "media"
@@ -1463,7 +1463,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 28
+     "execution_count": 27
     }
    ],
    "metadata": {
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "source": [
     "k = 15\n",
     "k"
@@ -1502,7 +1502,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 29
+     "execution_count": 28
     }
    ],
    "metadata": {
@@ -1527,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "source": [
     "probabilidade = ((np.e ** (-media)) * (media ** k)) / (np.math.factorial(k))\n",
     "print('%0.8f' % probabilidade)"
@@ -1583,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "source": [
     "from scipy.stats import poisson\n",
     "\n",
@@ -1835,7 +1835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -2502,7 +2502,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 32
+     "execution_count": 31
     }
    ],
    "metadata": {
@@ -2585,7 +2585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "source": [
     "media = 1.70\n",
     "media"
@@ -2599,7 +2599,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 33
+     "execution_count": 32
     }
    ],
    "metadata": {
@@ -2614,7 +2614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "source": [
     "desvio_padrao = 0.1\n",
     "desvio_padrao"
@@ -2628,7 +2628,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 34
+     "execution_count": 33
     }
    ],
    "metadata": {
@@ -2643,7 +2643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "source": [
     "Z = (1.8 - media) / desvio_padrao\n",
     "Z"
@@ -2657,7 +2657,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 35
+     "execution_count": 34
     }
    ],
    "metadata": {
@@ -2682,7 +2682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "source": [
     "probabilidade = 0.8413\n",
     "probabilidade"
@@ -2696,7 +2696,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 36
+     "execution_count": 35
     }
    ],
    "metadata": {
@@ -2721,7 +2721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "source": [
     "from scipy.stats import norm\n",
     "norm.cdf(Z)\n",
@@ -2737,7 +2737,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 37
+     "execution_count": 36
     }
    ],
    "metadata": {
@@ -2782,7 +2782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "source": [
     "Z = (1.7 - media) / desvio_padrao\n",
     "Z"
@@ -2796,7 +2796,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 38
+     "execution_count": 37
     }
    ],
    "metadata": {
@@ -2811,7 +2811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "source": [
     "Z = (1.8 - media) / desvio_padrao\n",
     "Z"
@@ -2825,7 +2825,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 39
+     "execution_count": 38
     }
    ],
    "metadata": {
@@ -2850,7 +2850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "source": [
     "probabilidade = (0.8413 - 0.5) * 2\n",
     "probabilidade"
@@ -2864,7 +2864,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 40
+     "execution_count": 39
     }
    ],
    "metadata": {
@@ -2889,7 +2889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "source": [
     "Z_inferior = (1.6 - media) / desvio_padrao\n",
     "round(Z_inferior, 2)"
@@ -2903,7 +2903,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 41
+     "execution_count": 40
     }
    ],
    "metadata": {
@@ -2918,7 +2918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 41,
    "source": [
     "Z_superior = (1.8 - media) / desvio_padrao\n",
     "round(Z_superior, 2)"
@@ -2932,7 +2932,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 48
+     "execution_count": 41
     }
    ],
    "metadata": {
@@ -2947,7 +2947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 42,
    "source": [
     "probabilidade = norm.cdf(Z_superior) - (1 - norm.cdf(Z_superior))\n",
     "probabilidade"
@@ -2961,14 +2961,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 49
+     "execution_count": 42
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 43,
    "source": [
     "probabilidade = norm.cdf(Z_superior) - norm.cdf(Z_inferior)\n",
     "probabilidade"
@@ -2982,7 +2982,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 50
+     "execution_count": 43
     }
    ],
    "metadata": {}
@@ -3019,7 +3019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 44,
    "source": [
     "Z = (1.9 - media) / desvio_padrao\n",
     "Z"
@@ -3033,7 +3033,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 51
+     "execution_count": 44
     }
    ],
    "metadata": {
@@ -3058,7 +3058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 45,
    "source": [
     "probabilidade = 1 - 0.9772\n",
     "probabilidade"
@@ -3072,7 +3072,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 54
+     "execution_count": 45
     }
    ],
    "metadata": {
@@ -3097,7 +3097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 46,
    "source": [
     "probabilidade = 1 - norm.cdf(Z)\n",
     "probabilidade"
@@ -3111,7 +3111,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 53
+     "execution_count": 46
     }
    ],
    "metadata": {
@@ -3126,7 +3126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 47,
    "source": [
     "probabilidade = norm.cdf(-Z)\n",
     "probabilidade"
@@ -3140,7 +3140,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 55
+     "execution_count": 47
     }
    ],
    "metadata": {
@@ -3317,9 +3317,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 48,
+   "source": [
+    "dados.shape[0]"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "76840"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 48
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3332,9 +3345,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 49,
+   "source": [
+    "dados['Renda'].mean()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2000.3831988547631"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 49
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3347,8 +3373,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 56,
+   "source": [
+    "amostra = dados.sample(n = 1000, random_state = 101)"
+   ],
    "outputs": [],
    "metadata": {
     "colab": {},
@@ -3358,9 +3386,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 57,
+   "source": [
+    "amostra.shape[0]"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 57
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "source": [
+    "amostra['Renda'].mean()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1998.783"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 58
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "source": [
+    "dados['Sexo'].value_counts(normalize = True)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0    0.692998\n",
+       "1    0.307002\n",
+       "Name: Sexo, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 59
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3373,9 +3456,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 60,
+   "source": [
+    "amostra['Sexo'].value_counts(normalize = True)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0    0.706\n",
+       "1    0.294\n",
+       "Name: Sexo, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 60
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3384,36 +3482,6 @@
     "colab_type": "code",
     "id": "y0J4UtOwG3F5",
     "outputId": "f2d60d13-3544-4787-a3b4-876b02666da1"
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 68
-    },
-    "colab_type": "code",
-    "id": "WGZT_wnjSgPy",
-    "outputId": "f905ff8a-84f8-45d5-d232-927630754b70"
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 68
-    },
-    "colab_type": "code",
-    "id": "1la3Y_reSgEM",
-    "outputId": "4611d1f3-3903-454b-e136-fb21c708be03"
    }
   },
   {
