--- a/Curso_de_Estatistica/Curso_de_Estatística_Parte_2.ipynb
+++ b/Curso_de_Estatistica/Curso_de_Estatística_Parte_2.ipynb
@@ -3607,7 +3607,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# $$\\sigma_\\bar{x} = \\frac{\\sigma}{\\sqrt{n}}$$\n",
+    "# $$\\sigma_{\\bar{x}} = \\frac{\\sigma}{\\sqrt{n}}$$\n",
     "\n",
     "O desvio padrão das médias amostrais é conhecido como **erro padrão da média**"
    ],
@@ -4230,7 +4230,7 @@
    "source": [
     "> O Teorema do Limite Central afirma que, com o aumento do tamanho da amostra, a distribuição das médias amostrais se aproxima de uma distribuição normal com média igual à média da população e **desvio padrão igual ao desvio padrão da variável original dividido pela raiz quadrada do tamanho da amostra**. Este fato é assegurado para n maior ou igual a 30.\n",
     "\n",
-    "# $$\\sigma_\\bar{x} = \\frac{\\sigma}{\\sqrt{n}}$$"
+    "# $$\\sigma_{\\bar{x}} = \\frac{\\sigma}{\\sqrt{n}}$$"
    ],
    "metadata": {
     "colab_type": "text",
@@ -4370,7 +4370,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "O **erro inferencial** é definido pelo **desvio padrão das médias amostrais** $\\sigma_\\bar{x}$ e pelo **nível de confiança** determinado para o processo."
+    "O **erro inferencial** é definido pelo **desvio padrão das médias amostrais** $\\sigma_{\\bar{x}}$ e pelo **nível de confiança** determinado para o processo."
    ],
    "metadata": {
     "colab_type": "text",
@@ -4643,7 +4643,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Obtendo $\\sigma_\\bar{x}$"
+    "### Obtendo $\\sigma_{\\bar{x}}$"
    ],
    "metadata": {
     "colab_type": "text",
