--- a/Curso_de_Estatistica/Curso_de_Estatística_Parte_2.ipynb
+++ b/Curso_de_Estatistica/Curso_de_Estatística_Parte_2.ipynb
@@ -5296,9 +5296,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 96,
+   "source": [
+    "0.95 / 2"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.025"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 96
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -5311,9 +5324,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 99,
+   "source": [
+    "0.5 + (0.95 / 2)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.975"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 99
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -5326,9 +5352,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 100,
+   "source": [
+    "z = norm.ppf(0.975)\n",
+    "z"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1.959963984540054"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 100
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -5351,9 +5391,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 101,
+   "source": [
+    "sigma = 3323.39\n",
+    "sigma"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "3323.39"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 101
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -5376,9 +5430,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 102,
+   "source": [
+    "e = 100\n",
+    "e"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 102
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -5401,9 +5469,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 103,
+   "source": [
+    "n = (z * (sigma / e)) ** 2\n",
+    "int(n.round())"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "4243"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 103
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
